--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </tr>
       <tr>
         <td>
-          <img id="src-image" src="" alt="" />
+          <img id="srcimage" src="" alt="" />
           <canvas id="canvas" width="300" style="display:none"></canvas>
         </td>
         <td>
