--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-  </head>
-  <div>
-    <p id="loading">Loading...</p>
-    <input
+
+<head>
+  <meta charset="UTF-8" />
+</head>
+<div>
+  <p id="loading">Loading...</p>
+  <input
       id="imgsrc"
       placeholder="image src"
       onchange="srcC()"
       style="width:70px"
     />
-    <br />
-    <input type="file" id="file-upload" />
-  </div>
+  <br />
+  <input type="file" id="file-upload" />
+</div>
 
-  <div class="row-align">
-    <table>
-      <tr>
-        <td align="center">原圖</td>
-        <td align="center">Canny邊緣偵測</td>
-        <td align="center">Canny黑白反轉</td>
-      </tr>
-      <tr>
-        <td>
-          <img id="srcimage" src="" alt="" />
-          <canvas id="canvas" width="300" style="display:none"></canvas>
-        </td>
-        <td>
-          <img id="Oimage" />
-        </td>
-        <td>
-          <img id="BWimage" />
-        </td>
-      </tr>
-    </table>
-  </div>
+<div class="row-align">
+  <table>
+    <tr>
+      <td align="center">原圖</td>
+      <td align="center" style="display:none">canvas</td>
+      <td align="center" style="display:none">canvasORG</td>
+      <td align="center">Canny邊緣偵測</td>
+      <td align="center">Canny黑白反轉</td>
+      <td align="center">邊緣疊加</td>
+    </tr>
+    <tr>
+      <td>
+        <img id="srcimage" src="" alt="" />
+      </td>
+      <td style="display:none">
+        <canvas id="canvas" width="300"></canvas>
+      </td>
+      <td style="display:none">
+        <canvas id="canvasORG" width="300"></canvas>
+      </td>
+      <td>
+        <img id="Oimage" />
+      </td>
+      <td>
+        <img id="BWimage" />
+      </td>
+      <td>
+        <img id="ADDimage" />
+      </td>
+    </tr>
+  </table>
+</div>
+
 </html>
 <script src="script.js"></script>
-<script
-  src="https://cdn.jsdelivr.net/gh/wallat/compiled-opencvjs/v4.2.0/opencv.js"
-  async
-  onload="onOpenCvReady();"
-  type="text/javascript"
-></script>
+<script src="https://cdn.jsdelivr.net/gh/wallat/compiled-opencvjs/v4.2.0/opencv.js" async onload="onOpenCvReady();"
+  type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
