--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
 </head>
 <div>
-  <p id="loading">Loading...</p>
+  <p id="loading">openCV.js Loading...</p>
   <input
       id="imgsrc"
       placeholder="image src"
